--- a/WPFTeamDraw/MainWindow.xaml
+++ b/WPFTeamDraw/MainWindow.xaml
@@ -8,16 +8,25 @@
             <RowDefinition Height="1*"></RowDefinition>
         </Grid.RowDefinitions>
 
-        
+
         <Canvas x:Name="DrawArea" Width="600" Height="500" ClipToBounds="True" Grid.Row="1" Background="White" MouseDown="DrawArea_MouseDown" MouseMove="DrawArea_MouseMove" MouseUp="DrawArea_MouseUp">
         </Canvas>
-        <Grid HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="594">
-            <ToggleButton x:Name="BlackColorTB" Background="Black" Height="20" Width="20" HorizontalAlignment="Left" Margin="10,20,0,0" VerticalAlignment="Top" Checked="BlackColorTB_Checked"/>
-            <ToggleButton x:Name="RedColorTB" Background="Red" Height="20" Width="20" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Checked="RedColorTB_Checked"/>
-            <ToggleButton x:Name="GreenColorTB" Background="Green" Height="20" Width="20" HorizontalAlignment="Left" Margin="35,20,0,0" VerticalAlignment="Top" Checked="GreenColorTB_Checked"/>
-            <ToggleButton x:Name="BlueColorTB" Background="Blue" Height="20" Width="20" HorizontalAlignment="Left" Margin="35,45,0,0" VerticalAlignment="Top" Checked="BlueColorTB_Checked"/>
-            <ToggleButton x:Name="YellowColorTB" Background="Yellow" Height="20" Width="20" HorizontalAlignment="Left" Margin="60,20,0,0" VerticalAlignment="Top" Checked="YellowColorTB_Checked"/>
-            <ToggleButton x:Name="PurpleColorTB" Background="Purple" Height="20" Width="20" HorizontalAlignment="Left" Margin="60,45,0,0" VerticalAlignment="Top" Checked="PurpleColorTB_Checked"/>
+        <Grid HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="594" Background="WhiteSmoke">
+            <ToggleButton x:Name="BlackColorTB" Background="Black" Height="20" Width="20" HorizontalAlignment="Left" Margin="10,29,0,0" VerticalAlignment="Top" Checked="BlackColorTB_Checked"/>
+            <ToggleButton x:Name="RedColorTB" Background="Red" Height="20" Width="20" HorizontalAlignment="Left" Margin="10,54,0,0" VerticalAlignment="Top" Checked="RedColorTB_Checked"/>
+            <ToggleButton x:Name="GreenColorTB" Background="Green" Height="20" Width="20" HorizontalAlignment="Left" Margin="35,29,0,0" VerticalAlignment="Top" Checked="GreenColorTB_Checked" RenderTransformOrigin="0.5,0.5" />
+            <ToggleButton x:Name="BlueColorTB" Background="Blue" Height="20" Width="20" HorizontalAlignment="Left" Margin="35,54,0,0" VerticalAlignment="Top" Checked="BlueColorTB_Checked"/>
+            <ToggleButton x:Name="YellowColorTB" Background="Yellow" Height="20" Width="20" HorizontalAlignment="Left" Margin="60,29,0,0" VerticalAlignment="Top" Checked="YellowColorTB_Checked"/>
+            <ToggleButton x:Name="PurpleColorTB" Background="Purple" Height="20" Width="20" HorizontalAlignment="Left" Margin="60,54,0,0" VerticalAlignment="Top" Checked="PurpleColorTB_Checked"/>
+            <Label Content="Colors" HorizontalContentAlignment="Center" Margin="5,0,514,0" VerticalAlignment="Top" Width="75" Height="24"/>
+            <Label Content="Brush thickness" HorizontalContentAlignment="Center" Margin="167,-2,267,0" VerticalAlignment="Top" RenderTransformOrigin="0.837,0.308" Width="160"/>
+            <ToggleButton x:Name="SmallThickTB" Background="White" Content="Small" Width="50" Height="50" VerticalContentAlignment="Center" Margin="167,24,377,26" Checked="SmallThickTB_Checked"/>
+            <ToggleButton x:Name="MediumThickTB" Background="White" Content="Medium" Width="50" Height="50" Margin="222,24,322,26" Checked="MediumThickTB_Checked"></ToggleButton>
+            <ToggleButton x:Name="LargeThickTB" Background="White" Content="Large" Width="50" Height="50" Margin="277,24,267,26" Checked="LargeThickTB_Checked"></ToggleButton>
+            <Label Content="Eraser" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="421,0,0,0" VerticalAlignment="Top" Width="160"/>
+            <ToggleButton x:Name="EraseSmallTB" Width="50" Height="50" Background="White" Margin="421,24,123,26" Content="Small" Checked="EraseSmallTB_Checked"></ToggleButton>
+            <ToggleButton x:Name="MediumEraseTB" Width="50" Height="50" Background="White" Content="Medium" Margin="476,24,68,26" Checked="MediumEraseTB_Checked"></ToggleButton>
+            <ToggleButton x:Name="LargeEraseTB" Width="50" Height="50" Background="White" Content="Large" Margin="531,24,13,26" Checked="LargeEraseTB_Checked"></ToggleButton>
         </Grid>
     </Grid>
 </Window>
