--- a/WPFTeamDraw/MainWindow.xaml
+++ b/WPFTeamDraw/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Name="MainWindows" x:Class="WPFTeamDraw.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Team Draw" Height="600" Width="600" ResizeMode="NoResize" Closed="MainWindows_Closed">
+        Title="Team Draw" Height="600" Width="600" ResizeMode="NoResize" Closed="MainWindows_Closed" Icon="brush.ico" >
     <Grid x:Name="MainGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="100"></RowDefinition>
